--- a/_includes/social/share_buttons.html
+++ b/_includes/social/share_buttons.html
@@ -64,7 +64,7 @@
         </li>
         {% endif %} {% if site.data.social.share.linkedin or site.theme_settings.linkedin %}
         <li>
-            <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | absolute_url }}&title={{ page.title | strip_html | url_encode }}%20%7C%20{{ site.title | strip_html | url_encode }}&summary=&source={{ page.url | absolute_url }}"
+            <a href="https://www.linkedin.com/sharing/share-offsite/?mini=true&url={{ page.url | absolute_url }}&title={{ page.title | strip_html | url_encode }}%20%7C%20{{ site.title | strip_html | url_encode }}&summary=&source={{ page.url | absolute_url }}"
                target="_blank" title="{{ site.data.social.language.str_share_on }} LinkedIn">
                 <i class="fab fa-linkedin fa-2x" aria-hidden="true"></i>
                 <span class="sr-only">{{ site.data.social.language.str_share_on | default: "Share on" }} LinkedIn</span>
