--- a/_includes/aligner.html
+++ b/_includes/aligner.html
@@ -12,6 +12,9 @@
         <img {% if images.size == 1 %}class="single"{% endif %}
              src="{{ image | prepend: 'assets/img/' | relative_url }}"
              alt="{{ image | prepend: '/' | split: '/' | last }}">
+	    {% if include.caption %}
+		 <figcaption style = "text-align:center">{{ include.caption }}</figcaption>
+		{% endif %}
     </div>
     {% endfor %}
 </div>
